# fleet-llm-d

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml  go.mod
.github/workflows/: benchmark.yaml  ci.yaml  e2e-kind.yaml  release.yaml  security.yaml
api/crds/: fleetcluster.yaml  fleetinferencepool.yaml  fleetintent.yaml  fleetoperation.yaml  fleetroutingpolicy.yaml  fleetscalingpolicy.yaml  kustomization.yaml  kvcachetransferpolicy.yaml  modellifecycle.yaml  placementpolicy.yaml  tenantprofile.yaml
api/openapi/: fleet-api.yaml
charts/fleet-llm-d/: Chart.yaml  README.md  values-federated-hub.yaml  values-hub.yaml  values-spoke.yaml  values-standalone-dev.yaml  values.schema.json  values.yaml
cmd/fleet-agent-sim/: main.go
cmd/fleet-controller/: main.go  main_test.go
cmd/fleetctl/: client.go  client_test.go  install.go  install_test.go  main.go
cmd/inference-mock/: main.go
cmd/modelplane-mock/: main.go  main_test.go
crates/fleet-agent/: Cargo.toml
crates/fleet-agent/src/: enforcer.rs  main.rs  proxy.rs  reporter.rs  watcher.rs
crates/fleet-common/: Cargo.toml
crates/fleet-common/src/: lib.rs
crates/fleet-gateway/: Cargo.toml
crates/fleet-gateway/src/: balancer.rs  discovery.rs  health.rs  main.rs  metrics.rs  router.rs
crates/fleet-ledger/: Cargo.toml
crates/fleet-ledger/src/: client.rs  hasher.rs  lib.rs
crates/kv-transfer/: Cargo.toml
crates/kv-transfer/src/: coordinator.rs  grpc_transport.rs  lib.rs  nixl_bridge.rs  protocol.rs
deploy/demo-cluster/: inference-vllm.yaml
deploy/docker/: Dockerfile.agent  Dockerfile.controller  Dockerfile.gateway  Dockerfile.inference-mock  Dockerfile.modelplane-mock
deploy/intel-cpu-inference/: Dockerfile  serve.py
deploy/kustomize/: README.md
deploy/migrations/: 001_initial_schema.sql
deploy/mock-inference/: Dockerfile  deployment.yaml  server.py
deploy/oberon/: Dockerfile.agent-sim  Dockerfile.mock-inference  Dockerfile.soak-driver  agent-sim.yaml  build-and-push.sh  deploy.sh  fleet-controller.yaml  fleet-postgres.yaml  fleet-resources.yaml  inference-ovms.yaml  inference-vllm.yaml  ledger.yaml  mock-inference.yaml  modelplane-mock.yaml  network-policies.yaml  semantic-router.yaml  soak-job.yaml
deploy/prometheus/: prometheus.yml  recording-rules.yaml
docs/: onboarding.md  security-audit-checklist.md  status-report.md
docs/benchmarks/: cpu-inference-benchmarks.md
docs/customer-patterns/: financial-services.md  sovereign-cloud.md  telco-ai-grid.md
docs/demo/: demo-script.md
docs/presentation/: demo-script.adoc  lab-guide.adoc  presenter-guide.adoc
docs/proposals/: cpu-inference-scaling-two-tracks.md  cpu-scaling-proposal.md  fleet-orchestration.md  intel-tdx-enablement.md  modelplane-collaboration.md
docs/whitepaper/: build.sh  cpu-inference-scaling-proof.md  diagrams.md  fleet-llm-d-whitepaper.md  governed-ai-inference-fleet-whitepaper-gdocs.md  governed-ai-inference-fleet-whitepaper.html  governed-ai-inference-fleet-whitepaper.md
examples/financial-services/: fleet-resources.yaml
examples/sovereign-cloud/: fleet-resources.yaml
examples/telco-edge/: fleet-resources.yaml
examples/verizon-edge/: fleet-resources.yaml
examples/wells-fargo/: fleet-resources.yaml
hack/: deploy-demo.sh  local-dev.sh
pkg/auth/: config.go  config_test.go  middleware.go  middleware_test.go  ratelimit.go  ratelimit_test.go  roles.go  roles_test.go  token.go  token_test.go
pkg/controller/: leader.go  leader_test.go  reconciler.go  reconciler_bench_test.go  reconciler_test.go  watcher.go  watcher_test.go  webhook.go  webhook_test.go
pkg/cost/: alerts.go  alerts_test.go  chargeback.go  chargeback_test.go  modelplane.go  modelplane_test.go  pricing.go  pricing_test.go  tokenomics.go  tokenomics_test.go
pkg/grpc/: fleet_service.go  server.go  server_test.go
pkg/intents/: evaluator.go  evaluator_test.go  gcl_adapter.go  gcl_adapter_test.go  kubernetes_repository.go  kubernetes_repository_test.go  service.go  service_test.go  types.go  validation.go  validation_test.go
pkg/ledger/: client.go  client_test.go  fleet_recorder.go  fleet_recorder_test.go  http_client.go  http_client_test.go  types.go
pkg/modelpack/: catalog.go  catalog_test.go  resolver.go  resolver_test.go  resources.go  resources_test.go  types.go
pkg/modelplane/: adapter.go  adapter_test.go  compliance.go  compliance_test.go  policy.go  policy_test.go  types.go  watcher.go  watcher_test.go
python/: Makefile  pyproject.toml
python/fleet_analytics/: __init__.py  anomaly_detector.py  capacity_planner.py  cost_optimizer.py
python/tests/: conftest.py  test_anomaly_detector.py  test_capacity_planner.py  test_cost_optimizer.py
web/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
workflows/: cluster-onboard.yaml  model-deployment.yaml  model-update.yaml  tenant-onboard.yaml
(+202 files in other folders)
