[project]
name = "fleet-analytics"
version = "0.1.0"
description = "Fleet analytics for fleet-llm-d: capacity planning, cost optimization, and anomaly detection"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "prometheus-api-client>=0.5",
    "grpcio>=1.62",
    "protobuf>=5.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
