[package]
name = "fleet-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Per-cluster agent that watches local llm-d resources and reports to the control plane"

[dependencies]
fleet-common = { path = "../fleet-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
prometheus-client = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
fleet-ledger = { path = "../fleet-ledger" }
