[package]
name = "fleet-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-cluster routing proxy for fleet-llm-d inference traffic"

[dependencies]
fleet-common = { path = "../fleet-common" }
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
