[package]
name = "kv-transfer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KV cache cross-cluster transfer coordinator for fleet-llm-d"

[features]
default = ["stream"]
stream = []
nixl = []

[dependencies]
fleet-common = { path = "../fleet-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
